@@ -11,6 +11,7 @@ See README and version control log for Test::Builder2 changes.
 
     New Features
     * Added TB2::Event::Log->between_levels() to compare log levels.
+    * The TAP formatter now respects log events.
 
     Documentation
     * The suggested meanings of event log levels are now documented.
